# texture

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Texture/doc/: .gitignore  Makefile  draft.tex  interface.tex  macros.tex  package.tex  result.tex
Texture/doc/figs/handdrawn/: example.fig
Texture/src/: CMakeLists.txt  cnmake.bat
Texture/src/automation/cmake/: platform-osx.cmake
Texture/src/automation/custom/: CopyScripts.cmake
Texture/src/code/: CMakeLists.txt
Texture/src/code/Main/: CMakeLists.txt  HelloWorld.cpp
Texture/src/code/Scripts/: CMakeLists.txt  texture.py
doc/: .gitignore  abstract.tex  ccs.tex  conclusion.tex  copyright.tex  dart_throw_alg.tex  example_fig.tex  final.tex  graphicspath.tex  implementation.tex  interface.tex  introduction.tex  macros.tex  method.tex  note.tex  paper.bib  paper.tex  prior.tex  symbols.tex  tog.tex
doc/figs/raster/: .gitignore
src/automation/cmake/: platform-linux.cmake  platform-win32.cmake
src/automation/cmake/Modules/: FindLATEX.cmake
src/automation/custom/: UseLATEX.cmake
src/code/Main/: CMakeLists.txt  Seam.cpp  Synth.cpp  Tile.cpp
src/code/Scripts/: CMakeLists.txt  example.py  test.py  texture.py  tile.py
