CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Texture)

SET(EXECUTABLE_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/bin CACHE INTERNAL "Binary output dir")
SET(LIBRARY_OUTPUT_PATH     ${CMAKE_BINARY_DIR}/lib CACHE INTERNAL "Lib output dir")
SET(LATEX_OUTPUT_PATH       ${CMAKE_BINARY_DIR}/doc CACHE INTERNAL "Latex output dir")
SET(CMAKE_UTIL_DIR ${CMAKE_SOURCE_DIR}/src/automation/cmake)
SET(CMAKE_MODULE_PATH ${CMAKE_UTIL_DIR}/Modules)

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(doc)
